--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -115,6 +115,7 @@
     "Tela_Detail_Producao",
     "Tela_Detail_Perdas",
     "Tel_Edit_Producao",
-    "Tel_Edit_Perdas"
+    "Tel_Edit_Perdas",
+    "Screen1"
   ]
 }
