--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -116,6 +116,6 @@
     "Tela_Detail_Perdas",
     "Tel_Edit_Producao",
     "Tel_Edit_Perdas",
-    "Screen1"
+    "Tela_acerto_levantamento"
   ]
 }
