--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -10,13 +10,13 @@
         ZIndex: =1
 
     Hora_00 As label:
-        Height: =24
+        Height: =23
         Size: =12
         Text: |-
             ="00:00"
         Width: =77
         X: =21
-        Y: =111
+        Y: =116
         ZIndex: =2
 
     Prod_0 As label:
@@ -27,16 +27,6 @@
         X: =103
         Y: =113
         ZIndex: =3
-
-    Hora_01 As label:
-        Height: =24
-        Size: =12
-        Text: |-
-            ="01:00"
-        Width: =77
-        X: =25
-        Y: =139
-        ZIndex: =4
 
     UTE As combobox:
         DisplayFields: =["Result"]
@@ -49,12 +39,43 @@
         Size: =12
         Width: =90
         X: =98
-        ZIndex: =5
+        ZIndex: =4
 
     DatePicker1 As datepicker:
         Height: =20
         Size: =12
         Width: =244
         X: =877
+        ZIndex: =5
+
+    Icon1_2 As icon.Home:
+        BorderColor: =RGBA(255, 255, 255, 1)
+        Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(9, 33, 98, 1)
+        FocusedBorderThickness: =1
+        Height: =23
+        Icon: =Icon.Home
+        OnSelect: =Navigate(Tela_Inicial_app,ScreenTransition.None)
+        Width: =27
         ZIndex: =6
+
+    Hora_1 As label:
+        Height: =23
+        Size: =12
+        Text: |-
+            ="00:00"
+        Width: =77
+        X: =Hora_00.X
+        Y: =Hora_00.Y+Hora_1.Height + 2
+        ZIndex: =7
+
+    Hora_2 As label:
+        Height: =23
+        Size: =12
+        Text: |-
+            ="00:00"
+        Width: =77
+        X: =Hora_00.X
+        Y: =Hora_1.Y+Hora_2.Height + 2
+        ZIndex: =8
 
